--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,4 +1,8 @@
 RewriteEngine On
 
-RewriteRule ^([a-z_]+)/([a-z_]+)/? index.php?controller_name=$1&action_name=$2 [QSA]
-RewriteRule ^([a-z_]+)/? index.php?controller_name=$1 [QSA]
+RewriteCond %{REQUEST_URI}::$1 ^(.*?/)(.*)::\2$
+RewriteRule ^(.*)$ - [E=BASE:%1]
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule %{ENV:BASE}/([a-z_]+)/([a-z_]+)/? index.php?controller_name=$1&action_name=$2 [QSA]
+RewriteRule %{ENV:BASE}/([a-z_]+)/? index.php?controller_name=$1 [QSA]
