--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "squizlabs/php_codesniffer": "~3",
         "phpunit/phpunit": "~6",
         "betterphp/php-reflection-utils": "~1",
-        "betterphp/php-native-mock": "~1"
+        "betterphp/php-native-mock": "~1",
+        "robmorgan/phinx": "~0.8"
     },
     "require": {
         "php-http/guzzle6-adapter": "~1",
