--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/betterphp/php-code-style.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/betterphp/php-error-reporter.git"
         }
     ],
     "require-dev": {
@@ -21,7 +25,8 @@
     },
     "require": {
         "php-http/guzzle6-adapter": "~1",
-        "knplabs/github-api": "~2"
+        "knplabs/github-api": "~2",
+         "betterphp/php-error-reporter": "dev-master"
     },
     "autoload": {
         "psr-4": {
