--- a/src/config.php.dist
+++ b/src/config.php.dist
@@ -4,6 +4,8 @@ declare(strict_types=1);
 
 class config {
 
+    const ENVIRONMENT = 'development';
+
     const GITHUB_API_NAME = '';
     const GITHUB_API_TOKEN = '';
 
